--- a/frontend/pages/Homepage/cards/MDM/_styles.scss
+++ b/frontend/pages/Homepage/cards/MDM/_styles.scss
@@ -34,7 +34,7 @@
       text-decoration: none;
     }
   }
-  .data-table-container {
+  .data-table-block {
     .data-table__table {
       table-layout: fixed;
 
