--- a/frontend/styles/global/_global.scss
+++ b/frontend/styles/global/_global.scss
@@ -49,10 +49,9 @@ a {
 }
 
 .body-wrap {
-  padding: $pad-xxlarge;
+  padding: $pad-xlarge;
   border-radius: 3px;
   background-color: $core-white;
-  min-width: 798px;
 }
 
 .has-sidebar {
