--- a/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/MembersPage/_styles.scss
+++ b/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/MembersPage/_styles.scss
@@ -1,15 +1,76 @@
 .members {
   &__page-description {
     font-size: $x-small;
-    color: $core-fleet-black;
-    @include sticky-settings-description;
+    padding-top: 40px;
     padding-bottom: $pad-medium;
+    margin: 0;
 
     a {
       color: $core-vibrant-blue;
       font-size: $x-small;
       font-weight: $bold;
       text-decoration: none;
+    }
+  }
+
+  .data-table-block {
+    .data-table__table {
+      thead {
+        .name__header {
+          width: $col-md;
+        }
+
+        .role__header {
+          width: $col-md;
+          border-right: none;
+        }
+
+        .email__header {
+          display: none;
+          width: 0;
+        }
+
+        .actions__header {
+          width: auto;
+        }
+
+        @media (min-width: $break-1400) {
+          .role__header {
+            border-right: 1px solid $ui-fleet-blue-15;
+          }
+
+          .email__header {
+            display: table-cell;
+            width: $col-lg;
+            border-right: none;
+          }
+        }
+      }
+
+      tbody {
+        .name__cell {
+          max-width: $col-md;
+        }
+
+        .role__cell {
+          max-width: $col-md;
+        }
+
+        .email__cell {
+          display: none;
+        }
+
+        .actions__cell {
+          width: auto;
+        }
+
+        @media (min-width: $break-1400) {
+          .email__cell {
+            display: table-cell;
+            max-width: $col-lg;
+          }
+        }
+      }
     }
   }
 }
