--- a/frontend/pages/hosts/ManageHostsPage/_styles.scss
+++ b/frontend/pages/hosts/ManageHostsPage/_styles.scss
@@ -1,4 +1,5 @@
 .manage-hosts {
+  min-width: 768px;
   .header-wrap {
     display: flex;
     align-items: center;
@@ -104,12 +105,35 @@
 
   .table-container {
     padding-top: $pad-small;
-  }
-
-  .data-table-container {
-    .data-table {
-      &__wrapper {
-        overflow-x: scroll;
+    .table-container__header {
+      .table-container__header-left {
+        .controls {
+          display: flex;
+        }
+      }
+    }
+    .table-container__data-table-block {
+      .data-table-block {
+        .data-table {
+          &__wrapper {
+            overflow-x: scroll;
+          }
+          &__table {
+            tbody {
+              .issues__cell {
+                display: flex;
+                align-items: center;
+                .host-issue {
+                  img {
+                    width: 16px;
+                    height: 16px;
+                    vertical-align: sub;
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -245,14 +269,6 @@
     }
     &:not(:only-child) {
       margin-bottom: $pad-medium;
-    }
-  }
-
-  .host-issue {
-    img {
-      width: 16px;
-      height: 16px;
-      vertical-align: sub;
     }
   }
 
