--- a/frontend/pages/policies/ManagePoliciesPage/components/PoliciesListWrapper/_styles.scss
+++ b/frontend/pages/policies/ManagePoliciesPage/components/PoliciesListWrapper/_styles.scss
@@ -7,52 +7,29 @@
     text-decoration: none;
   }
 
-  &__wrapper {
-    border: 1px solid $ui-fleet-blue-15;
-    border-radius: 4px;
-    overflow: hidden;
-    margin-top: $pad-medium;
-  }
-
   thead {
-    background-color: $ui-off-white;
-    border-bottom: 1px solid $ui-fleet-blue-15;
-
     th {
-      font-size: $x-small;
-      font-weight: $bold;
-      text-align: left;
-      padding: $pad-medium $pad-large;
-      &.passing_host_count__header, &.failing_host_count__header, &.webhook__header {
+      &.passing_host_count__header,
+      &.failing_host_count__header,
+      &.webhook__header {
         width: 20%;
         @media (min-width: $medium-width) {
           width: 15%;
         }
       }
+      &.passing_host_count__header,
+      &.failing_host_count__header {
+        .status-header-text {
+          margin-left: 10px;
+        }
+      }
     }
-  }
-
-  &__th-pack-name {
-    padding-left: 0;
-    text-align: left;
-  }
-
-  &__select-all {
-    margin-bottom: 0;
   }
 
   &__empty-table {
     text-align: center;
     font-size: $x-small;
     color: $core-fleet-black;
-  }
-
-  &__policy-count {
-    color: $core-fleet-black;
-    font-size: $x-small;
-    font-weight: $bold;
-    margin: 0 12px 0 0;
-    display: inline-block;
   }
 }
 
