--- a/frontend/pages/software/ManageSoftwarePage/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/_styles.scss
@@ -39,7 +39,11 @@
 
   &__description {
     margin: 0;
-    margin-bottom: 40px;
+    margin-bottom: $pad-large;
+    max-width: 75%;
+    @media (min-width: $break-990) {
+      max-width: none;
+    }
 
     h2 {
       text-transform: uppercase;
@@ -56,69 +60,6 @@
     }
   }
 
-  .button {
-    font-size: $x-small;
-
-    img {
-      transform: scale(0.5);
-    }
-  }
-
-  .rightcaret {
-    &::before {
-      content: url("../assets/images/icon-chevron-blue-16x16@2x.png");
-      transform: scale(0.5) rotate(-90deg);
-      width: 16px;
-      border-radius: 0px;
-      padding: 0px;
-      padding-right: 10px;
-      margin-top: 5px;
-    }
-  }
-
-  .upcaret {
-    &::before {
-      content: url("../assets/images/icon-chevron-blue-16x16@2x.png");
-      transform: scale(0.5) rotate(180deg);
-      width: 16px;
-      border-radius: 0px;
-      padding: 0px;
-      padding-right: 2px;
-      margin-right: $pad-small;
-      margin-top: 5px;
-      position: relative;
-      top: -4px;
-      left: 6px;
-    }
-  }
-
-  &__details {
-    display: inline-flex;
-    vertical-align: middle;
-    margin-left: $pad-small;
-    margin-top: -20px;
-
-    .hint {
-      color: $core-fleet-black;
-
-      &--brand {
-        color: $core-vibrant-blue;
-      }
-    }
-  }
-
-  .table-container {
-    min-height: 435px;
-  }
-  .data-table__wrapper {
-    overflow-x: auto;
-  }
-  .form-field--dropdown {
-    margin: 0;
-  }
-  .component__tabs-wrapper .table-container__header {
-    display: none;
-  }
   &__empty-software {
     margin: 80px auto 0;
     display: flex;
@@ -157,113 +98,191 @@
       }
     }
   }
-  &__count {
-    display: flex;
 
-    :first-child {
-      margin-right: $pad-small;
-    }
-    .count-error {
-      color: $ui-error;
-    }
-    .count-loading {
-      color: $ui-fleet-black-50;
-    }
-  }
+  &__table {
+    .table-container {
+      &__header-left {
+        .manage-software-page__count {
+          display: flex;
 
-  &__status_dropdown {
-    width: 219px;
-
-    .Select-menu-outer {
-      width: 364px;
-      max-height: 310px;
-
-      .Select-menu {
-        max-height: none;
-      }
-    }
-    .Select-value {
-      padding-left: $pad-medium;
-      padding-right: $pad-medium;
-
-      &::before {
-        display: inline-block;
-        position: absolute;
-        padding: 5px 0 0 0; // centers spin
-        content: url(../assets/images/icon-filter-black-16x16@2x.png);
-        transform: scale(0.5);
-        height: 26px;
-        left: 2px;
-      }
-    }
-    .Select-value-label {
-      padding-left: $pad-large;
-      font-size: $small !important;
-    }
-  }
-  .table-container__search-input {
-    width: 420px;
-  }
-  .data-table-container {
-    .data-table__table {
-      table-layout: fixed;
-
-      thead {
-        .name__header {
-          width: 35%;
-        }
-        .hosts_count__header {
-          width: 56px;
-          border-right: 0;
-        }
-        .id__header {
-          width: 180px;
-        }
-      }
-
-      tbody {
-        .name__cell,
-        .version__cell {
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-        }
-        .id__cell {
-          padding: 0;
-        }
-      }
-
-      tr {
-        .software-link {
-          color: $core-vibrant-blue;
-          visibility: hidden;
-          font-weight: bold;
-          text-decoration: none;
-          vertical-align: middle;
-
-          a {
-            text-decoration: none;
+          :first-child {
+            margin-right: $pad-small;
           }
-          img {
-            height: 16px;
-            width: 16px;
-            vertical-align: middle;
+          .count-error {
+            color: $ui-error;
           }
-
-          .link-text {
-            padding-right: $pad-xxsmall;
+          .count-loading {
+            color: $ui-fleet-black-50;
           }
         }
-
-        &:hover {
-          .software-link {
-            visibility: visible;
+        .controls {
+          .form-field--dropdown {
+            margin: 0;
+          }
+          .manage-software-page__vuln_dropdown {
+            width: 219px;
+            .Select-menu-outer {
+              width: 364px;
+              max-height: 310px;
+              .Select-menu {
+                max-height: none;
+              }
+            }
+            .Select-value {
+              padding-left: $pad-medium;
+              padding-right: $pad-medium;
+              &::before {
+                display: inline-block;
+                position: absolute;
+                padding: 5px 0 0 0; // centers spin
+                content: url(../assets/images/icon-filter-black-16x16@2x.png);
+                transform: scale(0.5);
+                height: 26px;
+                left: 2px;
+              }
+            }
+            .Select-value-label {
+              padding-left: $pad-large;
+              font-size: $small !important;
+            }
           }
         }
       }
+      &__search {
+        width: 100%;
+        .search-field__input-wrapper {
+          width: 100%;
+        }
+        @media (min-width: $break-768) {
+          width: auto;
+          .search-field__input-wrapper {
+            width: 411px;
+          }
+        }
+      }
+      &__data-table-block {
+        .data-table-block {
+          .data-table__table {
+            tr {
+              .software-link {
+                color: $core-vibrant-blue;
+                visibility: hidden;
+                font-weight: bold;
+                text-decoration: none;
+                vertical-align: middle;
+
+                a {
+                  text-decoration: none;
+                }
+
+                img {
+                  height: 16px;
+                  width: 16px;
+                  vertical-align: middle;
+                }
+
+                .link-text {
+                  padding-right: $pad-xxsmall;
+                }
+              }
+
+              &:hover {
+                .software-link {
+                  visibility: visible;
+                }
+              }
+            }
+
+            thead {
+              .name__header {
+                width: $col-md;
+              }
+              .version__header {
+                width: 0;
+              }
+              .source__header {
+                display: none;
+                width: 0;
+              }
+              .vulnerabilities__header {
+                display: none;
+                width: 0;
+              }
+              .hosts_count__header {
+                width: auto;
+                border-right: 0;
+              }
+              @media (min-width: $break-990) {
+                .version__header {
+                  width: $col-md;
+                }
+                .vulnerabilities__header {
+                  display: table-cell;
+                }
+              }
+              @media (min-width: $break-1400) {
+                .source__header {
+                  display: table-cell;
+                }
+              }
+            }
+
+            tbody {
+              .name__cell {
+                width: $col-md;
+              }
+              .version__cell {
+                width: 0;
+              }
+              .source__cell {
+                display: none;
+                width: 0;
+              }
+              .vulnerabilities__cell {
+                width: 0;
+                display: none;
+
+                .text-muted {
+                  color: $ui-fleet-black-50;
+                }
+              }
+              .hosts_count__cell {
+                width: auto;
+                .hosts-cell__wrapper {
+                  display: flex;
+                  justify-content: space-between;
+                  .hosts-cell__count {
+                    display: none;
+                  }
+                  .hosts-cell__link {
+                    display: flex;
+                  }
+                }
+              }
+              @media (min-width: $break-990) {
+                .version_cell {
+                  width: $col-md;
+                }
+                .vulnerabilities__cell {
+                  display: table-cell;
+                }
+                .hosts_count__cell {
+                  .hosts-cell__wrapper {
+                    .hosts-cell__count {
+                      display: flex;
+                    }
+                  }
+                }
+              }
+              @media (min-width: $break-1400) {
+                .source__cell {
+                  display: table-cell;
+                }
+              }
+            }
+          }
+        }
+      }
     }
-  }
-  .text-muted {
-    color: $ui-fleet-black-50;
   }
 }
